--- a/front/style/strmr.css
+++ b/front/style/strmr.css
@@ -15,3 +15,118 @@ button i.fa {
 .busy button i.fa {
     display: inline;
 }
+
+.poster {
+    position: relative;
+    margin-bottom: 15px;
+}
+
+.poster:before {
+  display: block;
+  content: "";
+  width: 100%;
+  padding-top: 150%;
+}
+
+.poster > .innards {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  background: #f9f9f9;
+  border: 1px solid #ececec;
+  border-radius: 6px;
+}
+
+.poster img {
+	width: 100%;
+	border-radius: 6px;
+}
+
+
+.cssload-loader{
+
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	opacity: .2;
+
+	width: 12px;
+	height: 12px;
+	left: 46%;
+	left: calc(50% - 6px);
+		left: -o-calc(50% - 6px);
+		left: -ms-calc(50% - 6px);
+		left: -webkit-calc(50% - 6px);
+		left: -moz-calc(50% - 6px);
+
+	border-radius: 12px;
+	background-color: rgb(0,0,0);
+	transform-origin:	50% 50%;
+		-o-transform-origin:	50% 50%;
+		-ms-transform-origin:	50% 50%;
+		-webkit-transform-origin:	50% 50%;
+		-moz-transform-origin:	50% 50%;
+	animation: cssload-loader 1.15s ease-in-out infinite;
+		-o-animation: cssload-loader 1.15s ease-in-out infinite;
+		-ms-animation: cssload-loader 1.15s ease-in-out infinite;
+		-webkit-animation: cssload-loader 1.15s ease-in-out infinite;
+		-moz-animation: cssload-loader 1.15s ease-in-out infinite;
+}
+
+.cssload-loader:before{
+	content: "";
+	position: absolute;
+	background-color: rgb(0,0,0);
+	top: 0px;
+	left: -24px;
+	height: 12px;
+	width: 12px;
+	border-radius: 12px;
+}
+
+.cssload-loader:after{
+	content: "";
+	position: absolute;
+	background-color: rgb(0,0,0);
+	top: 0px;
+	left: 24px;
+	height: 12px;
+	width: 12px;
+	border-radius: 12px;
+}
+
+
+
+
+@keyframes cssload-loader{
+		0%{transform:rotate(0deg);}
+		50%{transform:rotate(180deg);}
+		100%{transform:rotate(180deg);}
+}
+
+@-o-keyframes cssload-loader{
+		0%{-o-transform:rotate(0deg);}
+		50%{-o-transform:rotate(180deg);}
+		100%{-o-transform:rotate(180deg);}
+}
+
+@-ms-keyframes cssload-loader{
+		0%{-ms-transform:rotate(0deg);}
+		50%{-ms-transform:rotate(180deg);}
+		100%{-ms-transform:rotate(180deg);}
+}
+
+@-webkit-keyframes cssload-loader{
+		0%{-webkit-transform:rotate(0deg);}
+		50%{-webkit-transform:rotate(180deg);}
+		100%{-webkit-transform:rotate(180deg);}
+}
+
+@-moz-keyframes cssload-loader{
+		0%{-moz-transform:rotate(0deg);}
+		50%{-moz-transform:rotate(180deg);}
+		100%{-moz-transform:rotate(180deg);}
+}
