--- a/front/app/components/movie/movie.html
+++ b/front/app/components/movie/movie.html
@@ -35,21 +35,21 @@
         </div>
 
         <table class="table table-striped table-sm" ng-if="!movie.loadingDetails && movie.magnet">
-            <tr>
+            <tr ng-if="movie.magnet.properties.resolution">
                 <td>Resolution</td>
                 <td>{{movie.magnet.properties.resolution }}</td>
             </tr>
-            <tr>
-                <td>Quality</td>
-                <td>{{movie.magnet.properties.quality }}</td>
-            </tr>
-            <tr>
+            <tr ng-if="movie.magnet.properties.codec">
                 <td>Codec</td>
                 <td>{{movie.magnet.properties.codec }}</td>
             </tr>
-            <tr>
+            <tr ng-if="movie.magnet.properties.quality">
+                <td>Quality</td>
+                <td>{{movie.magnet.properties.quality | uppercase }}</td>
+            </tr>
+            <tr ng-if="movie.magnet.properties.group">
                 <td>Group</td>
-                <td>{{movie.magnet.properties.group }}</td>
+                <td>{{movie.magnet.properties.group | uppercase }}</td>
             </tr>
         </table>
 
@@ -60,8 +60,8 @@
     </div>
 
     <div class="col-md-7" ng-if="!movie.loadingDetails">
-        <h2>{{ movie.title }}
-            <small>{{ movie.year }}</small>
+        <h2>{{ movie.details.title }}
+            <small>{{ movie.details.year }}</small>
         </h2>
 
         <p class="blockquote">{{movie.details.plot}}</p>
